force-app/main/default/objects/Resource__c/Resource__c.object-meta.xml
<CustomObject>
    <label>Resource</label>
    <nameField>
        <label>Developer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resources</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>