force-app/main/default/objects/Resource__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approver</label>
    <type>Checkbox</type>
</CustomField>