force-app/main/default/objects/Resource__c/fields/Assigned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Hours__c</fullName>
    <label>Hours worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>