force-app/main/default/objects/Resource__c/fields/Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Efficiency__c</fullName>
    <formula>IF(Experience__c &gt;= 1,
    Totel_Project_Assigned__c / 2,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Efficiency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>