force-app/main/default/objects/Resource__c/fields/Is_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Is_Assigned__c</fullName>
    <formula>Totel_Project_Assigned__c &gt;= 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Assigned</label>
    <type>Checkbox</type>
</CustomField>