force-app/main/default/objects/Resource__c/fields/Is_Available_for_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_for_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Available for Assignment</label>
    <type>Checkbox</type>
</CustomField>