force-app/main/default/objects/Resource__c/fields/is_Fresher__c.field-meta.xml
<CustomField>
    <fullName>is_Fresher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Fresher</label>
    <type>Checkbox</type>
</CustomField>