force-app/main/default/objects/Resource__c/fields/Is_New__c.field-meta.xml
<CustomField>
    <fullName>Is_New__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this checkbox to mark the resource as a new team member under observation. This helps identify users within their first 15 days for additional support, training, or performance review.</inlineHelpText>
    <label>Is New</label>
    <type>Checkbox</type>
</CustomField>