force-app/main/default/objects/Resource__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Directors</fullName>
            </value>
            <value>
                <fullName>Human resource(HR)</fullName>
            </value>
            <value>
                <fullName>Sales &amp; Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>