force-app/main/default/objects/Resource__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Additional Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex, LWC, Flow, Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>