force-app/main/default/objects/Resource__c/fields/Total_Capacity_hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Capacity_hours__c</fullName>
    <label>Total Capacity (hours)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>