force-app/main/default/objects/Resource__c/fields/Totel_Project_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Totel_Project_Assigned__c</fullName>
    <label>Totel Project Assigned</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>