force-app/main/default/objects/Resource__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Experience__c</columns>
    <columns>Is_Available_for_Assignment__c</columns>
    <columns>Totel_Project_Assigned__c</columns>
    <columns>Total_Capacity_hours__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>