force-app/main/default/objects/Resource__c/listViews/Current_Developers.listView-meta.xml
<ListView>
    <fullName>Current_Developers</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>is_Fresher__c</columns>
    <columns>Totel_Project_Assigned__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Current Developers</label>
</ListView>